--- a/docker/Dockerfile.cuda
+++ b/docker/Dockerfile.cuda
@@ -16,7 +16,7 @@ RUN apt-get update && \
         build-essential cmake git ninja-build g++ make patchelf \
         rdma-core libibverbs-dev \
         libgoogle-glog-dev libgflags-dev libgtest-dev libelf-dev \
-        libnuma-dev libdrm-dev libdrm-amdgpu1 \
+        libnuma-dev \
         pkg-config zlib1g-dev curl && \
 \
 # ───── Add Python ${PY_VER} PPA & install Python ${PY_VER} + setuptools ─────
@@ -47,7 +47,7 @@ RUN python${PY_VER} -m pip install --no-cache-dir --upgrade setuptools
 # ───── Set Python ${PY_VER} as default python3 and python3-config ─────
 RUN ln -sf /usr/bin/python${PY_VER} /usr/local/bin/python3 && \
     ln -sf /usr/bin/python${PY_VER}-config /usr/local/bin/python3-config
-    
+
 WORKDIR /io
 
-CMD ["bash"] 
+CMD ["bash"]
