--- a/p2p/Makefile.rocm
+++ b/p2p/Makefile.rocm
@@ -50,7 +50,7 @@ $(P2P_PYTHON_EXT): $(OBJECTS) $(RDMA_HOME)/librdma_hip.a
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(HIP_LIB)
 
-$(P2P_SHARED_LIB): $(CAPI_OBJECT) $(CORE_OBJECT) RDMA_PLUGIN_SO
+$(P2P_SHARED_LIB): $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_PLUGIN_SO)
 	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) RDMA_PLUGIN_SO \
 	      -L$(HIP_LIB) -lcudart -lcuda \
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
