--- a/p2p/Makefile.rocm
+++ b/p2p/Makefile.rocm
@@ -33,7 +33,7 @@ LDFLAGS         = -L$(HIP_LIB) -lamdhip64 \
 # Target and source files
 P2P_PYTHON_EXT   := p2p$(PYEXT)
 P2P_SHARED_LIB := libuccl_p2p.so
-RDMA_PLUGIN_SO := librdma_plugin.a
+RDMA_PLUGIN_LIB := librdma_plugin.a
 SOURCES := engine.cc pybind_engine.cc
 OBJECTS := $(SOURCES:.cc=.o)
 CAPI_SOURCE := uccl_engine.cc
@@ -50,8 +50,8 @@ $(P2P_PYTHON_EXT): $(OBJECTS) $(RDMA_HOME)/librdma_hip.a
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(HIP_LIB)
 
-$(P2P_SHARED_LIB): $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_PLUGIN_SO)
-	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_PLUGIN_SO) \
+$(P2P_SHARED_LIB): $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_PLUGIN_LIB)
+	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_PLUGIN_LIB) \
 	      -L$(HIP_LIB) -lamdhip64 \
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(HIP_LIB) $(PYTHON_LIB) -libverbs -lz -lelf
@@ -61,7 +61,7 @@ $(RDMA_HOME)/librdma_hip.a: $(filter-out $(RDMA_HOME)/nccl_plugin.cc %_test.cc, 
 
 RDMA_OBJECTS := $(patsubst $(RDMA_HOME)/%.cc,%.o,$(filter-out $(RDMA_HOME)/nccl_plugin.cc %_test.cc,$(wildcard $(RDMA_HOME)/*.cc)))
 
-$(RDMA_PLUGIN_SO): $(RDMA_OBJECTS)
+$(RDMA_PLUGIN_LIB): $(RDMA_OBJECTS)
 	ar rcs $@ $(RDMA_OBJECTS)
 
 $(RDMA_OBJECTS): %.o: $(RDMA_HOME)/%.cc
@@ -77,11 +77,11 @@ install: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
 	@cp $(P2P_PYTHON_EXT) $(INSTALL_DIR)/
 	@echo "Installation complete. Module installed as: $(INSTALL_DIR)/$(P2P_PYTHON_EXT)"
 	install -m 755 $(P2P_SHARED_LIB) $(LIBDIR)/
-	install -m 755 $(RDMA_PLUGIN_SO) $(LIBDIR)/
+	install -m 755 $(RDMA_PLUGIN_LIB) $(LIBDIR)/
 	install -m 644 $(CAPI_HEADER) $(INCDIR)/
 # Clean build artifacts
 clean:
-	rm -f $(OBJECTS) $(CAPI_OBJECT) $(P2P_SHARED_LIB) $(P2P_PYTHON_EXT) $(RDMA_PLUGIN_SO) $(RDMA_OBJECTS)
+	rm -f $(OBJECTS) $(CAPI_OBJECT) $(P2P_SHARED_LIB) $(P2P_PYTHON_EXT) $(RDMA_PLUGIN_LIB) $(RDMA_OBJECTS)
 	make -C $(RDMA_HOME) -f Makefile.rocm clean -j$(nproc)
 
 # Test the module
