--- a/docker/Dockerfile.efa
+++ b/docker/Dockerfile.efa
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=nvidia/cuda:12.8.0-devel-ubuntu22.04
+ARG BASE_IMAGE=nvidia/cuda:12.9.0-devel-ubuntu22.04
 FROM ${BASE_IMAGE}
 ARG PY_VER=3.13
 
@@ -12,16 +12,15 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         software-properties-common \
         build-essential cmake git ninja-build g++ make patchelf \
-        rdma-core libibverbs-dev \
+        rdma-core libibverbs-dev libnuma-dev \
         libgoogle-glog-dev libgflags-dev libgtest-dev libelf-dev \
-        libnuma-dev libdrm-dev libdrm-amdgpu1 \
         pkg-config zlib1g-dev curl && \
 \
 # ───── Add Python ${PY_VER} PPA & install Python ${PY_VER} + setuptools ─────
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
     apt-get install -y --no-install-recommends \
-        python${PY_VER} python${PY_VER}-dev python${PY_VER}-venv python3-setuptools python3-distutils && \
+        python${PY_VER} python${PY_VER}-dev python${PY_VER}-venv && \
 \
 # ───── Bootstrap pip for Python ${PY_VER} ─────
     curl -sS https://bootstrap.pypa.io/get-pip.py | python${PY_VER} && \
@@ -64,7 +63,7 @@ RUN python${PY_VER} -m pip install --no-cache-dir build auditwheel pybind11
 
 # ───── Install PyTorch with CUDA support ─────
 RUN python${PY_VER} -m pip install --no-cache-dir torch torchvision torchaudio \
-    --index-url https://download.pytorch.org/whl/cu128
+    --index-url https://download.pytorch.org/whl/cu129
 
 RUN python${PY_VER} -m pip install --no-cache-dir --upgrade setuptools
 
