--- a/docker/Dockerfile.gh
+++ b/docker/Dockerfile.gh
@@ -14,7 +14,7 @@ RUN apt-get update && \
         build-essential cmake git ninja-build g++ make patchelf \
         rdma-core libibverbs-dev libnuma-dev libgfortran5 \
         libgoogle-glog-dev libgflags-dev libgtest-dev libgomp1 libelf-dev \
-        pkg-config zlib1g-dev curl && \
+        pkg-config zlib1g-dev curl unzip && \
 \
 # ───── Add Python ${PY_VER} PPA & install Python ${PY_VER} + setuptools ─────
     add-apt-repository ppa:deadsnakes/ppa && \
