--- a/docker/Dockerfile.gh
+++ b/docker/Dockerfile.gh
@@ -12,10 +12,9 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         software-properties-common \
         build-essential cmake git ninja-build g++ make patchelf \
-        rdma-core libibverbs-dev \
+        rdma-core libibverbs-dev libnuma-dev libgfortran5 \
         libgoogle-glog-dev libgflags-dev libgtest-dev libgomp1 libelf-dev \
-        libnuma-dev libdrm-dev libdrm-amdgpu1 libgfortran5 \
-        pkg-config zlib1g-dev curl && \
+        pkg-config zlib1g-dev curl unzip && \
 \
 # ───── Add Python ${PY_VER} PPA & install Python ${PY_VER} + setuptools ─────
     add-apt-repository ppa:deadsnakes/ppa && \
