--- a/p2p/docker/dockerfile.rocm
+++ b/p2p/docker/dockerfile.rocm
@@ -14,9 +14,8 @@ RUN apt-get update && \
     software-properties-common \
     build-essential cmake git ninja-build g++ make patchelf \
     rdma-core libibverbs-dev ibverbs-utils net-tools infiniband-diags \
-    libgoogle-glog-dev libgflags-dev libgtest-dev libelf-dev \
-    libnuma-dev libdrm-dev libdrm-amdgpu1 \
-    pkg-config zlib1g-dev curl \
+    libgoogle-glog-dev libgflags-dev libgtest-dev libelf-dev libnuma-dev \
+    pkg-config zlib1g-dev curl unzip \
     autoconf automake libtool linux-headers-$(uname -r) && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
