--- a/ep/bench/fifo/Makefile
+++ b/ep/bench/fifo/Makefile
@@ -3,13 +3,17 @@
 # ===============================================================================
 
 CUDA_PATH ?= /usr/local/cuda
+ROCM_PATH ?= /opt/rocm
 NVCC := $(CUDA_PATH)/bin/nvcc
+HIPCC := $(ROCM_PATH)/bin/hipcc
 CXX := g++
 
 # Auto-detect GPU architecture
 GPU_ARCH := $(shell nvidia-smi --query-gpu=compute_cap --format=csv,noheader | head -1 | sed 's/\.//' || echo "90")
 
 TARGET := benchmark
+NETWORK_BENCH_EFA := network_latency_bench_efa
+NETWORK_BENCH_AMD := network_latency_bench_amd
 
 # NVCC flags (release mode)
 NVCC_FLAGS := -std=c++17
@@ -24,6 +28,9 @@ CXX_FLAGS := -std=c++17 -Wall -Wextra -pthread
 CXX_FLAGS += -DMSCCLPP_USE_CUDA
 CXX_FLAGS += -O3 -DNDEBUG
 
+HIPCC_FLAGS := -std=c++17 -Wall -Wextra -pthread
+HIPCC_FLAGS += -O3 -DNDEBUG
+
 # Include paths
 INCLUDES := -I../../include -I../../src
 INCLUDES += -I$(CUDA_PATH)/include
@@ -31,6 +38,9 @@ INCLUDES += -I$(CUDA_PATH)/include
 # Libraries
 LIBS := -lpthread -lcudart -lcuda -lnuma
 LIBS += -L$(CUDA_PATH)/lib64
+
+HIP_LIBS := -lpthread -lnuma -libverbs
+HIP_LIBS += -L$(ROCM_PATH)/lib -lamdhip64
 
 # Source files
 SRC_CU := launch_kernel_shim.cu
@@ -52,6 +62,16 @@ $(TARGET): $(OBJ_CU) $(OBJ_CPP)
 	$(NVCC) $(NVCC_FLAGS) $(INCLUDES) -o $@ $^ $(LIBS)
 	@echo "Build complete: $@"
 
+$(NETWORK_BENCH_EFA): network_latency_bench.cpp
+	@echo "Compiling $@..."
+	$(CXX) $(CXX_FLAGS) -o $@ $< $(LIBS) -libverbs -lefa
+	@echo "Build complete: $@"
+
+$(NETWORK_BENCH_AMD): network_latency_bench.cpp
+	@echo "Compiling $@..."
+	$(HIPCC) $(HIPCC_FLAGS) -o $@ $< $(HIP_LIBS)
+	@echo "Build complete: $@"
+
 # CUDA compilation rule
 %.o: %.cu
 	@echo "Compiling CUDA: $<"
@@ -70,7 +90,7 @@ $(TARGET): $(OBJ_CU) $(OBJ_CPP)
 # Clean build artifacts
 clean:
 	@echo "Cleaning..."
-	@rm -f $(TARGET) *.o ../../src/*.o
+	@rm -f $(TARGET) $(NETWORK_BENCH_EFA) $(NETWORK_BENCH_AMD) *.o ../../src/*.o
 	@echo "Done."
 
 .PHONY: all clean
